Twitter like button project changed
Former-commit-id: b5d7f03d1a5a90e849eab1ffb8dd74d8e2d24db0
Former-commit-id: c3bab4d234076094dcdcda75c3e399ebbfac2112 [formerly 721f4384d284c85c733c66daa34a52c04ec68820]
Former-commit-id: 234e50ea05e3ea54c930610f7de0b0a0c3f685a6

--- a/Client/Tests/Restaurant.UnitTests/app.config
+++ b/Client/Tests/Restaurant.UnitTests/app.config
@@ -44,11 +44,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.6.1.0" newVersion="3.6.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.8.1.0" newVersion="3.8.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ploeh.AutoFixture" publicKeyToken="b24654c590009d4f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.51.0.0" newVersion="3.51.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.6.2.0" newVersion="4.6.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
