--- a/Client/Tests/Restaurant.UnitTests/packages.config
+++ b/Client/Tests/Restaurant.UnitTests/packages.config
@@ -7,6 +7,7 @@
   <package id="Castle.Core" version="4.0.0" targetFramework="net461" />
   <package id="Moq" version="4.7.0" targetFramework="net461" />
   <package id="NUnit" version="3.0.1" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net461" />
   <package id="reactiveui-core" version="7.4.0" targetFramework="net452" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
