--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -5,6 +5,7 @@
   <package id="reactiveui" version="7.4.0" targetFramework="monoandroid60" />
   <package id="reactiveui-core" version="7.4.0" targetFramework="monoandroid60" />
   <package id="refit" version="2.4.1" targetFramework="monoandroid51" />
+  <package id="Refractored.Controls.CircleImageView" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Rx-Core" version="2.2.5" targetFramework="monoandroid51" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="monoandroid51" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="monoandroid51" />
