--- a/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
+++ b/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Controls\BadgeBarButtonItem.cs" />
     <Compile Include="Controls\UIBadgeLabel.cs" />
     <Compile Include="Controls\UIBarButtonItem.cs" />
+    <Compile Include="Effects\MaxLinesEffect.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <BundleResource Include="Resources\Default-568h%402x.png" />
