Fixed issues with MainPage mvvm ipmlementation
Former-commit-id: b39aaf20fafeabf7bb88abed0d76afd56e5ea631
Former-commit-id: bcf888bbfb56051dd04df697780eccfc4166539f [formerly 435c9ba2ecb49c75616045ada79936dbc245c1ef]
Former-commit-id: dee7e57788557561c18c0f4b505450afa3ced945

--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -421,10 +421,12 @@
     <AndroidResource Include="Resources\drawable\search.xml" />
     <TransformFile Include="Resources\drawable\close.xml" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\Restaurant.Abstractions\Restaurant.Abstractions.csproj">
+      <Project>{147B8D2D-E0C0-415A-8380-7739CC0F581A}</Project>
+      <Name>Restaurant.Abstractions</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Restaurant.Core\Restaurant.Core.csproj">
       <Project>{a0547077-0cf6-461d-8a2d-514c4ed89c94}</Project>
       <Name>Restaurant.Core</Name>
