--- a/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -1,19 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Ansuria.XFGloss" version="1.0.6.59" targetFramework="xamarinios10" />
+  <package id="Autofac" version="4.6.2" targetFramework="xamarinios10" />
+  <package id="AutoMapper" version="6.2.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="xamarinios10" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Http.Headers" version="1.1.2" targetFramework="xamarinios10" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="xamarinios10" />
+  <package id="reactiveui" version="7.4.0" targetFramework="xamarinios10" />
+  <package id="reactiveui-core" version="7.4.0" targetFramework="xamarinios10" />
+  <package id="Refit" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="xamarinios10" />
+  <package id="Splat" version="1.4.0" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="xamarinios10" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Diagnostics.Contracts" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.IO" version="4.3.0" targetFramework="xamarinios10" />
@@ -23,15 +42,18 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
@@ -45,6 +67,7 @@
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="xamarinios10" />
+  <package id="System.Text.Encodings.Web" version="4.4.0" targetFramework="xamarinios10" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="xamarinios10" />
@@ -54,5 +77,5 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.RoundedBoxView" version="1.0.0.7" targetFramework="xamarinios10" />
-  <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms" version="2.5.0.77107" targetFramework="xamarinios10" />
 </packages>
