recovered some icons
Former-commit-id: ca50154aa82a0c798260ddd6b35ffb5fbb157e2d
Former-commit-id: c9a4aa51dee82b4ef80b4c8c2c92a6e6cdcdd075 [formerly 9d21fd1ebd48ea1e7aad6cb2fe531b80cd7ba0bf]
Former-commit-id: 2814fab4bf68d34fffb0dcf11fbb74f723f6f86b

--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -288,6 +288,21 @@
     <AndroidResource Include="Resources\drawable-ldpi\like_fill.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_heart_outline_grey600_24dp.png" />
     <AndroidResource Include="Resources\menu\nav_menu.xml" />
+    <AndroidResource Include="Resources\drawable\arrow_down.png" />
+    <AndroidResource Include="Resources\drawable\back_menu.jpg" />
+    <AndroidResource Include="Resources\drawable\close.xml" />
+    <AndroidResource Include="Resources\drawable\drawer_header_background.png" />
+    <AndroidResource Include="Resources\drawable\facebook.png" />
+    <AndroidResource Include="Resources\drawable\google.png" />
+    <AndroidResource Include="Resources\drawable\icon.png" />
+    <AndroidResource Include="Resources\drawable\like.png" />
+    <AndroidResource Include="Resources\drawable\like_fill.png" />
+    <AndroidResource Include="Resources\drawable\minus.xml" />
+    <AndroidResource Include="Resources\drawable\plus.xml" />
+    <AndroidResource Include="Resources\drawable\rounded_square.xml" />
+    <AndroidResource Include="Resources\drawable\search.xml" />
+    <AndroidResource Include="Resources\drawable\up_arrow.png" />
+    <AndroidResource Include="Resources\drawable\ViewCellBackground.xml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
