--- a/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
+++ b/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <OutputType>Exe</OutputType>
     <IsPackable>false</IsPackable>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
