--- a/Server/Restaurant.Server.Core/Restaurant.Server.Core.csproj
+++ b/Server/Restaurant.Server.Core/Restaurant.Server.Core.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
