CI tests failing issue
Former-commit-id: 3b4b8a62e317f02b14c1201bc62fe30252448494
Former-commit-id: d3323605ba9493a22d3110cd52f87312416900a8 [formerly 719eb3ddfcca71f01fb859a0855c8a6883f2ef9d]
Former-commit-id: 851f7bed117eae3f8fc339d7c595b0c3c33314ce

--- a/Server/Restaurant.Server.Api/Restaurant.Server.Api.csproj
+++ b/Server/Restaurant.Server.Api/Restaurant.Server.Api.csproj
@@ -33,6 +33,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="2.0.0-preview1-final" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="2.0.0-preview1" />
   </ItemGroup>
