Mono Cecil for NUnit adapter package
Former-commit-id: cb10f147b717e239e3179610b046eb318f8665b3
Former-commit-id: 6dc0e3bc57176da6f48b855669945b449e9309ce [formerly 9d5922f8654a1ce7130c53fba292cefe84a191f4]
Former-commit-id: 35f4822324a3af34fc9c47e5834aa485504e201f

--- a/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
+++ b/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AutoFixture" Version="4.0.0-rc1" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.0.0-rc1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Mono.Cecil" Version="0.10.0-beta7" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
     <PackageReference Include="NUnit" Version="3.9.0" />
