added icons and Total Price for basket page
Former-commit-id: 26f7a9ee283fef5eaf5e5a45edf02e140ac2b6c1
Former-commit-id: 7dc18e1d456bec975558e8c73861a07382296ef5 [formerly a2703eab213043401b1922ef096aa956e1ff8ec6]
Former-commit-id: 728b9e108242ee2f20a360b30c22c8c826df1b19

--- a/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -311,6 +311,9 @@
     <AndroidResource Include="Resources\drawable\search.xml" />
     <AndroidResource Include="Resources\drawable\up_arrow.png" />
     <AndroidResource Include="Resources\drawable\ViewCellBackground.xml" />
+    <AndroidResource Include="Resources\drawable\check.xml" />
+    <AndroidResource Include="Resources\drawable\heart.xml" />
+    <AndroidResource Include="Resources\drawable\heart_outline_white.xml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
