Orders component and removed reference daily eatings from orders for a while
Former-commit-id: fbff6250b8e37d1fb2314f33931198ed70788d46
Former-commit-id: 905cee31bc24da83581ccc28d58d2beb331c35a1 [formerly e917a56c4fe7dcf19b6a1b30143a2be6cbc7ddb5]
Former-commit-id: e756e183c91de737ac55c62057db1e8c67dc7fcd

--- a/Server/Restaurant.Server.Api/Properties/launchSettings.json
+++ b/Server/Restaurant.Server.Api/Properties/launchSettings.json
@@ -10,8 +10,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
+      "commandLineArgs": "test",
       "launchBrowser": true,
-      "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
