ios icons finished
Former-commit-id: 334bc24c3831205176b309a005e4af54b64f6f6b
Former-commit-id: d2e5240caa7e786f69f4b3d55c5b2a10cd6ef080 [formerly 5545c007f6efb6d27ca76bc4682f5b707cd55d12]
Former-commit-id: d4aa743ebb4cab94e99e13b5b597060e61bc1f5c

--- a/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
+++ b/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
@@ -113,15 +113,9 @@
     <BundleResource Include="Resources\Default-Portrait%402x.png" />
     <BundleResource Include="Resources\Default.png" />
     <BundleResource Include="Resources\Default%402x.png" />
-    <BundleResource Include="Resources\ic_account.png" />
-    <BundleResource Include="Resources\ic_alert_circle_outline.png" />
-    <BundleResource Include="Resources\ic_basket.png" />
     <BundleResource Include="Resources\ic_email.png" />
     <BundleResource Include="Resources\ic_key_variant.png" />
-    <BundleResource Include="Resources\ic_restaurant_menu_black.png" />
-    <BundleResource Include="Resources\ic_settings.png" />
     <BundleResource Include="Resources\ic_shopping_cart_white.png" />
-    <BundleResource Include="Resources\ic_wechat.png" />
     <BundleResource Include="Resources\Icon-60%402x.png" />
     <BundleResource Include="Resources\Icon-60%403x.png" />
     <BundleResource Include="Resources\Icon-76.png" />
@@ -141,9 +135,21 @@
     <Compile Include="Renderers\RestaurantEntryRenderer.cs" />
     <Compile Include="Renderers\ThemedNavigationRenderer.cs" />
     <Compile Include="Renderers\TwitterLikeButtonRenderer.cs" />
-    <BundleResource Include="Resources\chat.png" />
-    <BundleResource Include="Resources\restaurant.png" />
+    <BundleResource Include="Resources\caht.png" />
+    <BundleResource Include="Resources\chat%402x.png" />
+    <BundleResource Include="Resources\chat%403x.png" />
+    <BundleResource Include="Resources\foods.png" />
+    <BundleResource Include="Resources\foods%402x.png" />
+    <BundleResource Include="Resources\foods%403x.png" />
     <BundleResource Include="Resources\shopping_basket.png" />
+    <BundleResource Include="Resources\shopping_basket%402x.png" />
+    <BundleResource Include="Resources\shopping_basket%403x.png" />
+    <BundleResource Include="Resources\minus.png" />
+    <BundleResource Include="Resources\minus%402x.png" />
+    <BundleResource Include="Resources\minus%403x.png" />
+    <BundleResource Include="Resources\plus.png" />
+    <BundleResource Include="Resources\plus%402x.png" />
+    <BundleResource Include="Resources\plus%403x.png" />
     <None Include="app.config" />
     <None Include="Info.plist">
       <SubType>Designer</SubType>
