--- a/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
+++ b/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Restaurant.Core\Restaurant.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\iOS\" />
+  </ItemGroup>
+
 </Project>
