Authentication implementation, client side
Former-commit-id: 97586df14ec36b0664cdf1d7b4f01744500b3c97
Former-commit-id: e6dc47037720f44fad8d79a5e4799d0df77437dc [formerly b57a692ea4878dbf1c31548b6a4f223640d697b2]
Former-commit-id: 12c551fc426211df10e2168c56fb7e6c3fff0803

--- a/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
+++ b/Client/Restaurant.Client/Restaurant.Abstractions/Restaurant.Abstractions.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\..\..\Common\Restaurant.Common\Restaurant.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Managers\" />
+  </ItemGroup>
+
 </Project>
