--- a/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
   <package id="Autofac" version="4.6.2" targetFramework="monoandroid71" />
   <package id="AutoMapper" version="6.2.0" targetFramework="monoandroid71" />
+  <package id="IdentityModel" version="2.16.0" targetFramework="monoandroid71" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="monoandroid71" />
