Fixed android warning for Xamarin.Forms 2.5
Former-commit-id: 7611fbf7c6ab873be9ef868be0a4d1bd66f89b4a
Former-commit-id: eef0064a5baae0b9bcd0fd574c3a2a00dee99c80 [formerly 5a4218963a23b330ab99f303b7b9f2ecc6562964]
Former-commit-id: 1e30b22531a7904e5ac2852b3be1098a131b1216

--- a/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -15,7 +15,7 @@
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
+    <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
@@ -228,9 +228,9 @@
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties\AndroidManifest.xml">
+    <None Include="Properties\AndroidManifest.xml">
       <SubType>Designer</SubType>
-    </Content>
+    </None>
     <AndroidResource Include="Resources\drawable-hdpi\ic_email.png" />
     <AndroidResource Include="Resources\drawable-hdpi\ic_key_variant.png" />
     <AndroidResource Include="Resources\drawable-ldpi\ic_email.png" />
