Self Signed Certificate
Former-commit-id: c95f073a5f87cd2ddcb3737998d2b6c82131589f
Former-commit-id: c555838c6c401b7d32f99478f036961a2a0b4bad [formerly 232c9ff97d4cec686c6ec80566a95f4c8f9531d6]
Former-commit-id: a68fec10dba60085bd3d716834057f0bf6fc4134

--- a/src/Server/Restaurant.Server.Api/Properties/launchSettings.json
+++ b/src/Server/Restaurant.Server.Api/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     },
     "iisExpress": {
       "applicationUrl": "http://localhost:6200/",
-      "sslPort": 44305
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -26,7 +26,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:6200/"
+      "applicationUrl": ""
     }
   }
 }
