--- a/src/Client/Restaurant.Client/Restaurant.iOS/packages.config
+++ b/src/Client/Restaurant.Client/Restaurant.iOS/packages.config
@@ -76,5 +76,6 @@
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugins.Forms.ImageCircle" version="1.8.1" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="3.1.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.5.0.77107" targetFramework="xamarinios10" />
 </packages>
