--- a/src/Server/Restaurant.Server.Auth/Restaurant.Server.Auth.csproj
+++ b/src/Server/Restaurant.Server.Auth/Restaurant.Server.Auth.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
