--- a/src/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -21,6 +21,9 @@
   <package id="Rx-Main" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="monoandroid71" />
   <package id="Splat" version="1.4.0" targetFramework="monoandroid71" />
+  <package id="Square.OkHttp" version="2.4.0.0" targetFramework="monoandroid71" />
+  <package id="Square.OkIO" version="1.5.0.0" targetFramework="monoandroid71" />
+  <package id="Square.Picasso" version="2.5.2.1" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Buffers" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
