--- a/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Mobile.UI/Restaurant.Mobile.UI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.0.1" />
+    <PackageReference Include="Microsoft.AppCenter.Distribute" Version="1.0.1" />
     <PackageReference Include="ReactiveUI" Version="8.0.0-alpha0113" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="2.0.0.31-beta" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
