--- a/src/Client/Restaurant.Client/Restaurant.Droid/packages.config
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/packages.config
@@ -3,6 +3,10 @@
   <package id="Autofac" version="4.6.2" targetFramework="monoandroid71" />
   <package id="AutoMapper" version="6.2.0" targetFramework="monoandroid71" />
   <package id="IdentityModel" version="2.16.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.AppCenter" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Microsoft.AppCenter.Analytics" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Microsoft.AppCenter.Crashes" version="1.0.1" targetFramework="monoandroid71" />
+  <package id="Microsoft.AppCenter.Distribute" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Microsoft.AspNetCore.WebUtilities" version="1.1.2" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="monoandroid71" />
