Unit Tests for providers
Former-commit-id: e1a7f23cc42ead83b07fde21133441c86d2c93cd
Former-commit-id: 990ac0eb483df5cb3082f7b4f01e6986f1e4b339 [formerly afc528ac45166d959f2ef7ccec9656f01459111f]
Former-commit-id: adf3956b3d779125b58ca12b758db581b717cbe8

--- a/src/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
+++ b/src/Client/Tests/Restaurant.Core.UnitTests/Restaurant.Core.UnitTests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <AssemblyName>Restaurant.Core.UnitTests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
