--- a/src/Client/Restaurant.Client/Restaurant.iOS/Info.plist
+++ b/src/Client/Restaurant.Client/Restaurant.iOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Restaurant.iOS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.companyname.Restaurant.iOS</string>
+	<string>jurabek</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
